Minor corrections to  formatting issues.
REmove overlapping issue with left margin of boxes section.

increase margins of quote and action sections.

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 
 .hero .container {
     max-width: 1200px;
+    min-width: 800px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -108,8 +109,9 @@ body {
 
 .boxes .container {
     max-width: 1200px;
+    min-width: 800px;
     margin: 0 auto;
-    padding: 0 150px;    
+    padding: 0 160px;    
     display: flex;
     flex-direction: column;
 }
@@ -158,7 +160,8 @@ body {
 .quote .container {
     gap: 20px;
     max-width: 1100px;
-    padding: 100px 150px;
+    min-width: 800px;
+    padding: 100px 160px;
     margin: 0 auto;    
 }
 
@@ -185,6 +188,7 @@ body {
 
 .action .container {
     max-width: 1200px;
+    min-width: 950px;
     padding: 0  150px;
     margin: 0 auto;;
     display: flex;
